--- a/frontend/app/templates/application.hbs
+++ b/frontend/app/templates/application.hbs
@@ -1,3 +1,50 @@
-<h2 id='title'>Welcome to Ember.js</h2>
+<!-- Navigation -->
+<nav class='navbar navbar-inverse navbar-fixed-top' role='navigation'>
+  <div class='container'>
+    <!-- Brand and toggle get grouped for better mobile display -->
+    <div class='navbar-header'>
+      <button type='button' class='navbar-toggle' data-toggle='collapse' data-target='#bs-example-navbar-collapse-1'>
+        <span class='sr-only'>Toggle navigation</span>
+        <span class='icon-bar'></span>
+        <span class='icon-bar'></span>
+        <span class='icon-bar'></span>
+      </button>
+      <a class='navbar-brand' href='#'>Start Bootstrap</a>
+    </div>
+    <!-- Collect the nav links, forms, and other content for toggling -->
+    <div class='collapse navbar-collapse' id='bs-example-navbar-collapse-1'>
+      <ul class='nav navbar-nav'>
+        <li>
+        <a href='#'>About</a>
+        </li>
+        <li>
+        <a href='#'>Products</a>
+        </li>
+        <li>
+        <a href='#'>Contact</a>
+        </li>
+      </ul>
+    </div>
+    <!-- /.navbar-collapse -->
+  </div>
+  <!-- /.container -->
+</nav>
 
 {{outlet}}
+
+<div class='container'>
+
+  <hr>
+
+  <!-- Footer -->
+  <footer>
+    <div class='row'>
+      <div class='col-lg-12'>
+        <p>Copyright &copy; Your Website 2014</p>
+      </div>
+    </div>
+  </footer>
+
+</div>
+<!-- /.container -->
+
