--- a/frontend/app/templates/application.hbs
+++ b/frontend/app/templates/application.hbs
@@ -1,6 +1,6 @@
 <!-- Navigation -->
 <nav class='navbar navbar-inverse navbar-fixed-top' role='navigation'>
-  <div class='container'>
+  <div class='container-fluid'>
     <!-- Brand and toggle get grouped for better mobile display -->
     <div class='navbar-header'>
       <button type='button' class='navbar-toggle' data-toggle='collapse' data-target='#bs-example-navbar-collapse-1'>
@@ -24,6 +24,12 @@
         <a href='#'>Contact</a>
         </li>
       </ul>
+      <form class="navbar-form navbar-right" role="search">
+        <div class="form-group has-feedback">
+          <input type="text" class="form-control" placeholder="Search">
+          <span class="glyphicon glyphicon-search form-control-feedback"></span>
+        </div>
+      </form>
     </div>
     <!-- /.navbar-collapse -->
   </div>
