--- a/frontend/app/templates/application.hbs
+++ b/frontend/app/templates/application.hbs
@@ -9,7 +9,8 @@
         <span class='icon-bar'></span>
         <span class='icon-bar'></span>
       </button>
-      <a class='navbar-brand' href='#'>Start Bootstrap</a>
+      <a class='navbar-brand' href='#'>
+        <img alt='Brand' src='images/kabisa.png' class='logo'>
     </div>
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class='collapse navbar-collapse' id='bs-example-navbar-collapse-1'>
@@ -24,10 +25,10 @@
         <a href='#'>Contact</a>
         </li>
       </ul>
-      <form class="navbar-form navbar-right" role="search">
-        <div class="form-group has-feedback">
-          <input type="text" class="form-control" placeholder="Search">
-          <span class="glyphicon glyphicon-search form-control-feedback"></span>
+      <form class='navbar-form navbar-right' role='search'>
+        <div class='form-group has-feedback'>
+          <input type='text' class='form-control' placeholder='Search'>
+          <span class='glyphicon glyphicon-search form-control-feedback'></span>
         </div>
       </form>
     </div>
@@ -46,7 +47,7 @@
   <footer>
     <div class='row'>
       <div class='col-lg-12'>
-        <p>Copyright &copy; Your Website 2014</p>
+        <p>Copyright &copy; Kabisa 2014</p>
       </div>
     </div>
   </footer>
