--- a/frontend/app/templates/index.hbs
+++ b/frontend/app/templates/index.hbs
@@ -25,13 +25,13 @@
             </ol>
             <div class='carousel-inner'>
               <div class='item active'>
-                <img class='slide-image' src='http://placehold.it/800x300' alt=''>
+                <img class='slide-image' src='http://lorempixel.com/800/300/technics/1/' alt=''>
               </div>
               <div class='item'>
-                <img class='slide-image' src='http://placehold.it/800x300' alt=''>
+                <img class='slide-image' src='http://lorempixel.com/800/300/technics/2/' alt=''>
               </div>
               <div class='item'>
-                <img class='slide-image' src='http://placehold.it/800x300' alt=''>
+                <img class='slide-image' src='http://lorempixel.com/800/300/technics/3/' alt=''>
               </div>
             </div>
             <a class='left carousel-control' href='#carousel-example-generic' data-slide='prev'>
@@ -49,7 +49,7 @@
 
         <div class='col-sm-4 col-lg-4 col-md-4'>
           <div class='thumbnail'>
-            <img src='http://placehold.it/320x150' alt=''>
+            <img src='http://lorempixel.com/320/150/technics/1/' alt=''>
             <div class='caption'>
               <h4 class='pull-right'>$24.99</h4>
               <h4><a href='#'>First Product</a>
@@ -71,7 +71,7 @@
 
         <div class='col-sm-4 col-lg-4 col-md-4'>
           <div class='thumbnail'>
-            <img src='http://placehold.it/320x150' alt=''>
+            <img src='http://lorempixel.com/320/150/technics/2/' alt=''>
             <div class='caption'>
               <h4 class='pull-right'>$64.99</h4>
               <h4><a href='#'>Second Product</a>
@@ -93,7 +93,7 @@
 
         <div class='col-sm-4 col-lg-4 col-md-4'>
           <div class='thumbnail'>
-            <img src='http://placehold.it/320x150' alt=''>
+            <img src='http://lorempixel.com/320/150/technics/3/' alt=''>
             <div class='caption'>
               <h4 class='pull-right'>$74.99</h4>
               <h4><a href='#'>Third Product</a>
@@ -115,7 +115,7 @@
 
         <div class='col-sm-4 col-lg-4 col-md-4'>
           <div class='thumbnail'>
-            <img src='http://placehold.it/320x150' alt=''>
+            <img src='http://lorempixel.com/320/150/technics/4/' alt=''>
             <div class='caption'>
               <h4 class='pull-right'>$84.99</h4>
               <h4><a href='#'>Fourth Product</a>
@@ -137,7 +137,7 @@
 
         <div class='col-sm-4 col-lg-4 col-md-4'>
           <div class='thumbnail'>
-            <img src='http://placehold.it/320x150' alt=''>
+            <img src='http://lorempixel.com/320/150/technics/5/' alt=''>
             <div class='caption'>
               <h4 class='pull-right'>$94.99</h4>
               <h4><a href='#'>Fifth Product</a>
@@ -171,7 +171,7 @@
     <div class='col-md-3'>
 
       <div class='thumbnail'>
-        <img class='img-responsive' src='http://placehold.it/800x300' alt=''>
+        <img class='img-responsive' src='http://lorempixel.com/800/300/technics/1/' alt=''>
         <div class='caption-full'>
           <h4 class='pull-right'>$24.99</h4>
           <h4><a href='#'>Product Name</a>
