--- a/frontend/app/templates/index.hbs
+++ b/frontend/app/templates/index.hbs
@@ -7,7 +7,7 @@
       <p class='lead'>Shop Name</p>
       <div class='list-group'>
         <a href='#' class='list-group-item'>Category 1</a>
-        <a href='#' class='list-group-item'>Category 2</a>
+        <a href='#' class='list-group-item active'>Category 2</a>
         <a href='#' class='list-group-item'>Category 3</a>
       </div>
     </div>
