--- a/frontend/app/templates/index.hbs
+++ b/frontend/app/templates/index.hbs
@@ -4,7 +4,7 @@
   <div class='row'>
 
     <div class='col-md-2'>
-      <p class='lead'>Shop Name</p>
+      <p class='lead'>Ember workShop</p>
       <div class='list-group'>
         <a href='#' class='list-group-item'>Category 1</a>
         <a href='#' class='list-group-item active'>Category 2</a>
@@ -138,6 +138,138 @@
         <div class='col-sm-4 col-lg-4 col-md-4'>
           <div class='thumbnail'>
             <img src='http://lorempixel.com/320/150/technics/5/' alt=''>
+            <div class='caption'>
+              <h4 class='pull-right'>$94.99</h4>
+              <h4><a href='#'>Fifth Product</a>
+              </h4>
+              <p>This is a short description. Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+            </div>
+            <div class='ratings'>
+              <p class='pull-right'>18 reviews</p>
+              <p>
+              <span class='glyphicon glyphicon-star'></span>
+              <span class='glyphicon glyphicon-star'></span>
+              <span class='glyphicon glyphicon-star'></span>
+              <span class='glyphicon glyphicon-star'></span>
+              <span class='glyphicon glyphicon-star-empty'></span>
+              </p>
+            </div>
+          </div>
+        </div>
+
+        <div class='col-sm-4 col-lg-4 col-md-4'>
+          <div class='thumbnail'>
+            <img src='http://lorempixel.com/320/150/technics/6/' alt=''>
+            <div class='caption'>
+              <h4 class='pull-right'>$94.99</h4>
+              <h4><a href='#'>Fifth Product</a>
+              </h4>
+              <p>This is a short description. Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+            </div>
+            <div class='ratings'>
+              <p class='pull-right'>18 reviews</p>
+              <p>
+              <span class='glyphicon glyphicon-star'></span>
+              <span class='glyphicon glyphicon-star'></span>
+              <span class='glyphicon glyphicon-star'></span>
+              <span class='glyphicon glyphicon-star'></span>
+              <span class='glyphicon glyphicon-star-empty'></span>
+              </p>
+            </div>
+          </div>
+        </div>
+
+        <div class='col-sm-4 col-lg-4 col-md-4'>
+          <div class='thumbnail'>
+            <img src='http://lorempixel.com/320/150/technics/7/' alt=''>
+            <div class='caption'>
+              <h4 class='pull-right'>$94.99</h4>
+              <h4><a href='#'>Fifth Product</a>
+              </h4>
+              <p>This is a short description. Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+            </div>
+            <div class='ratings'>
+              <p class='pull-right'>18 reviews</p>
+              <p>
+              <span class='glyphicon glyphicon-star'></span>
+              <span class='glyphicon glyphicon-star'></span>
+              <span class='glyphicon glyphicon-star'></span>
+              <span class='glyphicon glyphicon-star'></span>
+              <span class='glyphicon glyphicon-star-empty'></span>
+              </p>
+            </div>
+          </div>
+        </div>
+
+        <div class='col-sm-4 col-lg-4 col-md-4'>
+          <div class='thumbnail'>
+            <img src='http://lorempixel.com/320/150/technics/8/' alt=''>
+            <div class='caption'>
+              <h4 class='pull-right'>$94.99</h4>
+              <h4><a href='#'>Fifth Product</a>
+              </h4>
+              <p>This is a short description. Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+            </div>
+            <div class='ratings'>
+              <p class='pull-right'>18 reviews</p>
+              <p>
+              <span class='glyphicon glyphicon-star'></span>
+              <span class='glyphicon glyphicon-star'></span>
+              <span class='glyphicon glyphicon-star'></span>
+              <span class='glyphicon glyphicon-star'></span>
+              <span class='glyphicon glyphicon-star-empty'></span>
+              </p>
+            </div>
+          </div>
+        </div>
+
+        <div class='col-sm-4 col-lg-4 col-md-4'>
+          <div class='thumbnail'>
+            <img src='http://lorempixel.com/320/150/technics/9/' alt=''>
+            <div class='caption'>
+              <h4 class='pull-right'>$94.99</h4>
+              <h4><a href='#'>Fifth Product</a>
+              </h4>
+              <p>This is a short description. Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+            </div>
+            <div class='ratings'>
+              <p class='pull-right'>18 reviews</p>
+              <p>
+              <span class='glyphicon glyphicon-star'></span>
+              <span class='glyphicon glyphicon-star'></span>
+              <span class='glyphicon glyphicon-star'></span>
+              <span class='glyphicon glyphicon-star'></span>
+              <span class='glyphicon glyphicon-star-empty'></span>
+              </p>
+            </div>
+          </div>
+        </div>
+
+        <div class='col-sm-4 col-lg-4 col-md-4'>
+          <div class='thumbnail'>
+            <img src='http://lorempixel.com/320/150/technics/10/' alt=''>
+            <div class='caption'>
+              <h4 class='pull-right'>$94.99</h4>
+              <h4><a href='#'>Fifth Product</a>
+              </h4>
+              <p>This is a short description. Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+            </div>
+            <div class='ratings'>
+              <p class='pull-right'>18 reviews</p>
+              <p>
+              <span class='glyphicon glyphicon-star'></span>
+              <span class='glyphicon glyphicon-star'></span>
+              <span class='glyphicon glyphicon-star'></span>
+              <span class='glyphicon glyphicon-star'></span>
+              <span class='glyphicon glyphicon-star-empty'></span>
+              </p>
+            </div>
+          </div>
+        </div>
+
+        <div class='col-sm-4 col-lg-4 col-md-4'>
+          <div class='thumbnail'>
+            <img src='http://lorempixel.com/320/150/city/2/' alt=''>
             <div class='caption'>
               <h4 class='pull-right'>$94.99</h4>
               <h4><a href='#'>Fifth Product</a>
