--- a/frontend/app/styles/_modules.scss
+++ b/frontend/app/styles/_modules.scss
@@ -1,6 +1,8 @@
 @import 'modules/logo';
 @import 'modules/reviews';
 @import 'modules/products';
+@import 'modules/product-detail';
+@import 'modules/buttons';
 
 .slide-image {
   width: 100%;
