--- a/frontend/app/styles/modules/_products.scss
+++ b/frontend/app/styles/modules/_products.scss
@@ -6,4 +6,8 @@
   @include make-sm-column(4);
   @include make-md-column(4);
   @include make-lg-column(4);
+
+  h4 {
+    @include truncate;
+  }
 }
