--- a/frontend/app/templates/index.hbs
+++ b/frontend/app/templates/index.hbs
@@ -1,5 +1,4 @@
 <div class='content-wrapper'>
-
   <div class='content-navigation'>
     <p class='lead'>Ember workShop</p>
     <div class='list-group'>
@@ -7,10 +6,9 @@
       <a href='#' class='list-group-item active'>Category 2</a>
       <a href='#' class='list-group-item'>Category 3</a>
     </div>
-  </div>
+  </div>  <!-- /.content-navigation -->
 
   <div class='content-main'>
-
     <div class='row carousel-holder'>
       <div class='col-md-12'>
         <div id='carousel-example-generic' class='carousel slide' data-ride='carousel'>
@@ -41,7 +39,6 @@
     </div>
 
     <div class='products'>
-
       <div class='product'>
         <div class='thumbnail'>
           <img src='http://lorempixel.com/320/150/technics/1/' alt=''>
@@ -290,13 +287,10 @@
         <p>If you like this template, then check out <a target='_blank' href='http://maxoffsky.com/code-blog/laravel-shop-tutorial-1-building-a-review-system/'>this tutorial</a> on how to build a working review system for your online store!</p>
         <a class='btn btn-primary' target='_blank' href='http://maxoffsky.com/code-blog/laravel-shop-tutorial-1-building-a-review-system/'>View Tutorial</a>
       </div>
-
     </div>
-
-  </div>
+  </div>  <!-- /.content-main -->
 
   <div class='content-detail'>
-
     <div class='thumbnail'>
       <img class='img-responsive' src='http://lorempixel.com/800/300/technics/1/' alt=''>
       <div class='caption-full'>
@@ -308,6 +302,7 @@
         <strong><a href='http://maxoffsky.com/code-blog/laravel-shop-tutorial-1-building-a-review-system/'>this building a review system tutorial</a>
         </strong>over at maxoffsky.com!</p>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+        <button type='button' class='edit'>Edit</button>
       </div>
       <div class='ratings'>
         <p class='pull-right'>3 reviews</p>
@@ -323,7 +318,6 @@
     </div>
 
     <div class='reviews'>
-
       <div class='row'>
         <div class='col-md-12'>
           <span class='glyphicon glyphicon-star'></span>
@@ -366,10 +360,6 @@
           <p>I've seen some better than this, but not at this price. I definitely recommend this item.</p>
         </div>
       </div>
-
-    </div>
-
+    </div>  <!-- /.content-detail -->
   </div>
-
-
-</div>
+</div>  <!-- /.content-wrapper -->
