Add css for landing

--- a/frontend/app/styles/_modules.scss
+++ b/frontend/app/styles/_modules.scss
@@ -3,6 +3,7 @@
 @import 'modules/products';
 @import 'modules/product-detail';
 @import 'modules/buttons';
+@import 'modules/landing';
 
 .slide-image {
   width: 100%;
