--- a/frontend/app/templates/application.hbs
+++ b/frontend/app/templates/application.hbs
@@ -9,8 +9,9 @@
         <span class='icon-bar'></span>
         <span class='icon-bar'></span>
       </button>
-      <a class='navbar-brand' href='#'>
+      {{#link-to 'index' class='navbar-brand'}}
         <img alt='Brand' src='images/kabisa.png' class='logo'>
+      {{/link-to}}
     </div>
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class='collapse navbar-collapse' id='bs-example-navbar-collapse-1'>
@@ -18,9 +19,9 @@
         <li>
         <a href='#'>About</a>
         </li>
-        <li>
-        <a href='#'>Products</a>
-        </li>
+        {{#link-to 'products' tagName='li' href=false}}
+          {{#link-to 'products' bubbles=false}}Products{{/link-to}}
+        {{/link-to}}
         <li>
         <a href='#'>Contact</a>
         </li>
