--- a/frontend/app/styles/modules/_landing.scss
+++ b/frontend/app/styles/modules/_landing.scss
@@ -3,7 +3,7 @@ header.landing {
   margin-top: -20px;
   padding: 100px 0;
   background-size: cover;
-  background: url('http://lorempixel.com/1920/500/') no-repeat center center scroll;
+  background: url('/images/landing.jpg') no-repeat center center scroll;
 }
 
 section.landing-wrapper {
