--- a/frontend/app/templates/products.hbs
+++ b/frontend/app/templates/products.hbs
@@ -19,13 +19,13 @@
           </ol>
           <div class='carousel-inner'>
             <div class='item active'>
-              <img class='slide-image' src='http://lorempixel.com/800/300/technics/1/' alt=''>
+              <img class='slide-image' src='images/bttf1.jpg' alt=''>
             </div>
             <div class='item'>
-              <img class='slide-image' src='http://lorempixel.com/800/300/technics/2/' alt=''>
+              <img class='slide-image' src='images/bttf2.jpg' alt=''>
             </div>
             <div class='item'>
-              <img class='slide-image' src='http://lorempixel.com/800/300/technics/3/' alt=''>
+              <img class='slide-image' src='images/bttf3.jpg' alt=''>
             </div>
           </div>
           <a class='left carousel-control' href='#carousel-example-generic' data-slide='prev'>
