--- a/frontend/app/styles/modules/_buttons.scss
+++ b/frontend/app/styles/modules/_buttons.scss
@@ -1,5 +1,14 @@
 button.edit {
   @extend .btn;
   @extend .btn-default;
-  @extend .pull-right;
+}
+
+button.update {
+  @extend .btn;
+  @extend .btn-primary;
+}
+
+button.cancel {
+  @extend .btn;
+  @extend .btn-default;
 }
