--- a/frontend/app/templates/products/show.hbs
+++ b/frontend/app/templates/products/show.hbs
@@ -69,12 +69,27 @@
     <div class='form-group'>
       {{input value=title class='form-control' placeholder='Enter a title'}}
     </div>
+
     <div class='form-group'>
       {{textarea value=description class='form-control' placeholder='Enter a description'}}
     </div>
+
     <div class='form-group'>
       {{input value=price class='form-control' type='number' placeholder='Enter a price'}}
     </div>
+
+    <div class='form-group'>
+      {{#if image}}
+        <img {{bind-attr src=image}}/>
+        <button {{action 'removeImage'}}type='button' class='remove pull-right'>Remove</button>
+      {{else}}
+        <img src='http://placehold.it/320x150&text=No image'>
+      {{/if}}
+      <div class='file'>
+        Browse...{{view 'upload-file' file=image accept='image/*'}}
+      </div>
+    </div>
+
     <button type='submit' {{bind-attr class=':update isDirty::disabled'}}>Update</button>
     <button {{action 'toggleEditing'}} type='button' class='cancel'>Cancel</button>
   </form>
