--- a/frontend/app/templates/products/show.hbs
+++ b/frontend/app/templates/products/show.hbs
@@ -1,96 +1,99 @@
 {{#unless isEditing}}
-  <div class='thumbnail'>
-    <img {{bind-attr src=image}}>
-    <div class='caption-full'>
-      <h4 class='pull-right'>${{price}}</h4>
-      <h4><a href='#'>{{title}}</a></h4>
-      <p>{{description}}</p>
-      <button {{action 'toggleEditing'}} type='button' class='edit'>Edit</button>
-    </div>
-    <div class='ratings'>
-      <p class='pull-right'>3 reviews</p>
-      <p>
+<div class='thumbnail'>
+  <img {{bind-attr src=image}}>
+  <div class='caption-full'>
+    <h4 class='pull-right'>${{price}}</h4>
+    <h4><a href='#'>{{title}}</a></h4>
+    <p>{{description}}</p>
+    <button {{action 'toggleEditing'}} type='button' class='edit'>Edit</button>
+  </div>
+  <div class='ratings'>
+    <p class='pull-right'>3 reviews</p>
+    <p>
+    <span class='glyphicon glyphicon-star'></span>
+    <span class='glyphicon glyphicon-star'></span>
+    <span class='glyphicon glyphicon-star'></span>
+    <span class='glyphicon glyphicon-star'></span>
+    <span class='glyphicon glyphicon-star-empty'></span>
+    4.0 stars
+    </p>
+  </div>
+</div>
+
+<div class='reviews'>
+  <div class='row'>
+    <div class='col-md-12'>
       <span class='glyphicon glyphicon-star'></span>
       <span class='glyphicon glyphicon-star'></span>
       <span class='glyphicon glyphicon-star'></span>
       <span class='glyphicon glyphicon-star'></span>
       <span class='glyphicon glyphicon-star-empty'></span>
-      4.0 stars
-      </p>
+      Anonymous
+      <span class='pull-right'>10 days ago</span>
+      <p>This product was great in terms of quality. I would definitely buy another!</p>
     </div>
   </div>
 
-  <div class='reviews'>
-    <div class='row'>
-      <div class='col-md-12'>
-        <span class='glyphicon glyphicon-star'></span>
-        <span class='glyphicon glyphicon-star'></span>
-        <span class='glyphicon glyphicon-star'></span>
-        <span class='glyphicon glyphicon-star'></span>
-        <span class='glyphicon glyphicon-star-empty'></span>
-        Anonymous
-        <span class='pull-right'>10 days ago</span>
-        <p>This product was great in terms of quality. I would definitely buy another!</p>
-      </div>
-    </div>
+  <hr>
 
-    <hr>
-
-    <div class='row'>
-      <div class='col-md-12'>
-        <span class='glyphicon glyphicon-star'></span>
-        <span class='glyphicon glyphicon-star'></span>
-        <span class='glyphicon glyphicon-star'></span>
-        <span class='glyphicon glyphicon-star'></span>
-        <span class='glyphicon glyphicon-star-empty'></span>
-        Anonymous
-        <span class='pull-right'>12 days ago</span>
-        <p>I've already ordered another one!</p>
-      </div>
-    </div>
-
-    <hr>
-
-    <div class='row'>
-      <div class='col-md-12'>
-        <span class='glyphicon glyphicon-star'></span>
-        <span class='glyphicon glyphicon-star'></span>
-        <span class='glyphicon glyphicon-star'></span>
-        <span class='glyphicon glyphicon-star'></span>
-        <span class='glyphicon glyphicon-star-empty'></span>
-        Anonymous
-        <span class='pull-right'>15 days ago</span>
-        <p>I've seen some better than this, but not at this price. I definitely recommend this item.</p>
-      </div>
+  <div class='row'>
+    <div class='col-md-12'>
+      <span class='glyphicon glyphicon-star'></span>
+      <span class='glyphicon glyphicon-star'></span>
+      <span class='glyphicon glyphicon-star'></span>
+      <span class='glyphicon glyphicon-star'></span>
+      <span class='glyphicon glyphicon-star-empty'></span>
+      Anonymous
+      <span class='pull-right'>12 days ago</span>
+      <p>I've already ordered another one!</p>
     </div>
   </div>
+
+  <hr>
+
+  <div class='row'>
+    <div class='col-md-12'>
+      <span class='glyphicon glyphicon-star'></span>
+      <span class='glyphicon glyphicon-star'></span>
+      <span class='glyphicon glyphicon-star'></span>
+      <span class='glyphicon glyphicon-star'></span>
+      <span class='glyphicon glyphicon-star-empty'></span>
+      Anonymous
+      <span class='pull-right'>15 days ago</span>
+      <p>I've seen some better than this, but not at this price. I definitely recommend this item.</p>
+    </div>
+  </div>
+</div>
 {{else}}
-  <form {{action 'submit' on='submit'}} role='form' class='well'>
-    <div class='form-group'>
-      {{input value=title class='form-control' placeholder='Enter a title'}}
-    </div>
+<form {{action 'submit' on='submit'}} role='form' class='well'>
+  <div {{bind-attr class=':form-group validationErrors.title:has-error'}}>
+    {{input value=title class='form-control' placeholder='Enter a title'}}
+    {{#if validationErrors.title}}
+    <div class='control-label'>{{validationErrors.title}}</div>
+    {{/if}}
+  </div>
 
-    <div class='form-group'>
-      {{textarea value=description class='form-control' placeholder='Enter a description'}}
-    </div>
+  <div class='form-group'>
+    {{textarea value=description class='form-control' placeholder='Enter a description'}}
+  </div>
 
-    <div class='form-group'>
-      {{input value=price class='form-control' type='number' placeholder='Enter a price'}}
-    </div>
+  <div class='form-group'>
+    {{input value=price class='form-control' type='number' placeholder='Enter a price'}}
+  </div>
 
-    <div class='form-group'>
-      {{#if image}}
-        <img {{bind-attr src=image}}/>
-        <button {{action 'removeImage'}}type='button' class='remove pull-right'>Remove</button>
-      {{else}}
-        <img src='http://placehold.it/320x150&text=No image'>
-      {{/if}}
-      <div class='file'>
-        Browse...{{view 'upload-file' file=image accept='image/*'}}
-      </div>
+  <div class='form-group'>
+    {{#if image}}
+    <img {{bind-attr src=image}}/>
+    <button {{action 'removeImage'}}type='button' class='remove pull-right'>Remove</button>
+    {{else}}
+    <img src='http://placehold.it/320x150&text=No image'>
+    {{/if}}
+    <div class='file'>
+      Browse...{{view 'upload-file' file=image accept='image/*'}}
     </div>
+  </div>
 
-    <button type='submit' {{bind-attr class=':update isDirty::disabled'}}>Update</button>
-    <button {{action 'toggleEditing'}} type='button' class='cancel'>Cancel</button>
-  </form>
+  <button type='submit' {{bind-attr class=':update isDirty::disabled'}}>Update</button>
+  <button {{action 'toggleEditing'}} type='button' class='cancel'>Cancel</button>
+</form>
 {{/unless}}
