--- a/frontend/app/templates/products/show.hbs
+++ b/frontend/app/templates/products/show.hbs
@@ -30,7 +30,7 @@
         <span class='glyphicon glyphicon-star'></span>
         <span class='glyphicon glyphicon-star-empty'></span>
         {{user}}
-        <span class='pull-right'>{{createdAt}}</span>
+        <span class='pull-right'>{{time-ago-in-words createdAt}}</span>
         <p>{{description}}</p>
       </div>
     </div>
