--- a/frontend/app/templates/products/show.hbs
+++ b/frontend/app/templates/products/show.hbs
@@ -24,11 +24,7 @@
   {{#each reviews}}
     <div class='row'>
       <div class='col-md-12'>
-        <span class='glyphicon glyphicon-star'></span>
-        <span class='glyphicon glyphicon-star'></span>
-        <span class='glyphicon glyphicon-star'></span>
-        <span class='glyphicon glyphicon-star'></span>
-        <span class='glyphicon glyphicon-star-empty'></span>
+        {{star-rating starCount=rating}}
         {{user}}
         <span class='pull-right'>{{time-ago-in-words createdAt}}</span>
         <p>{{description}}</p>
