--- a/frontend/app/templates/application.hbs
+++ b/frontend/app/templates/application.hbs
@@ -20,7 +20,7 @@
         <a href='#'>About</a>
         </li>
         {{#link-to 'products' tagName='li' href=false}}
-          {{#link-to 'products' bubbles=false}}Products{{/link-to}}
+          {{#link-to 'products' (query-params category='') bubbles=false}}Products{{/link-to}}
         {{/link-to}}
         <li>
         <a href='#'>Contact</a>
