--- a/frontend/app/templates/products.hbs
+++ b/frontend/app/templates/products.hbs
@@ -2,9 +2,9 @@
   <div class='content-navigation'>
     <p class='lead'>Ember workShop</p>
     <div class='list-group'>
-      <a href='#' class='list-group-item'>Category 1</a>
-      <a href='#' class='list-group-item active'>Category 2</a>
-      <a href='#' class='list-group-item'>Category 3</a>
+      {{#each uniqCategories}}
+        {{#link-to 'products' (query-params category=name) class='list-group-item'}}{{name}} <small> ({{products.length}})</small>{{/link-to}}
+      {{/each}}
     </div>
   </div>  <!-- /.content-navigation -->
 
@@ -19,6 +19,7 @@
             <div class='caption'>
               <h4 class='pull-right'>${{price}}</h4>
               <h4>{{#link-to 'products.show' this}}{{title}}{{/link-to}}</h4>
+              <p class='badge'>{{categoryName}}</p>
               <p>{{description}}</p>
             </div>
             <div class='ratings'>
