--- a/frontend/app/templates/application.hbs
+++ b/frontend/app/templates/application.hbs
@@ -56,3 +56,8 @@
 </div>
 <!-- /.container -->
 
+<div class='github-fork-ribbon-wrapper right-bottom'>
+  <div class='github-fork-ribbon'>
+    <a href='https://github.com/bazzel/ember-workshop'>Fork me on GitHub</a>
+  </div>
+</div>
