Show actual average ratings
I was curious how to show the actual ratings, so I implemented a basic version.
There's probably a better way as this calculates averages on every call.

--- a/frontend/app/templates/products.hbs
+++ b/frontend/app/templates/products.hbs
@@ -23,14 +23,8 @@
               <p>{{description}}</p>
             </div>
             <div class='ratings'>
-              <p class='pull-right'>15 reviews</p>
-              <p>
-              <span class='glyphicon glyphicon-star'></span>
-              <span class='glyphicon glyphicon-star'></span>
-              <span class='glyphicon glyphicon-star'></span>
-              <span class='glyphicon glyphicon-star'></span>
-              <span class='glyphicon glyphicon-star'></span>
-              </p>
+              <p class='pull-right'>{{reviews.length}} reviews</p>
+              <p>{{star-rating starCount=averageRating}}</p>
             </div>
           </div>
         </div>
