--- a/frontend/app/templates/products/show.hbs
+++ b/frontend/app/templates/products/show.hbs
@@ -1,74 +1,70 @@
 {{#unless isEditing}}
-<div class='thumbnail'>
-  <img {{bind-attr src=image}}>
-  <div class='caption-full'>
-    <h4 class='pull-right'>${{price}}</h4>
-    <h4><a href='#'>{{title}}</a></h4>
-    <p class='badge'>{{categoryName}}</p>
-    <p>{{description}}</p>
-    <button {{action 'toggleEditing'}} type='button' class='edit'>Edit</button>
+  <div class='thumbnail'>
+    <img {{bind-attr src=image}}>
+    <div class='caption-full'>
+      <h4 class='pull-right'>${{price}}</h4>
+      <h4><a href='#'>{{title}}</a></h4>
+      <p class='badge'>{{categoryName}}</p>
+      <p>{{description}}</p>
+      <button {{action 'toggleEditing'}} type='button' class='edit'>Edit</button>
+    </div>
+    <div class='ratings'>
+      <p class='pull-right'>{{reviews.length}} reviews</p>
+      <p>
+      {{star-rating starCount=averageRating}}
+      {{averageRating}} stars
+      </p>
+    </div>
   </div>
-  <div class='ratings'>
-    <p class='pull-right'>3 reviews</p>
-    <p>
-    <span class='glyphicon glyphicon-star'></span>
-    <span class='glyphicon glyphicon-star'></span>
-    <span class='glyphicon glyphicon-star'></span>
-    <span class='glyphicon glyphicon-star'></span>
-    <span class='glyphicon glyphicon-star-empty'></span>
-    4.0 stars
-    </p>
-  </div>
-</div>
 
-<div class='reviews'>
-  {{#each reviews}}
-    <div class='row'>
-      <div class='col-md-12'>
-        {{star-rating starCount=rating}}
-        {{user}}
-        <span class='pull-right'>{{time-ago-in-words createdAt}}</span>
-        <p>{{description}}</p>
+  <div class='reviews'>
+    {{#each reviews}}
+      <div class='row'>
+        <div class='col-md-12'>
+          {{star-rating starCount=rating}}
+          {{user}}
+          <span class='pull-right'>{{time-ago-in-words createdAt}}</span>
+          <p>{{description}}</p>
+        </div>
+      </div>
+
+      <hr>
+    {{/each}}
+  </div>
+{{else}}
+  <form {{action 'submit' on='submit'}} role='form' class='well'>
+    <div {{bind-attr class=':form-group validationErrors.title:has-error'}}>
+      {{input value=title class='form-control' placeholder='Enter a title'}}
+      {{#if validationErrors.title}}
+        <div class='control-label'>{{validationErrors.title}}</div>
+      {{/if}}
+    </div>
+
+    <div class='form-group'>
+      {{textarea value=description class='form-control' placeholder='Enter a description'}}
+    </div>
+
+    <div class='form-group'>
+      {{input value=price class='form-control' type='number' placeholder='Enter a price'}}
+    </div>
+
+    <div class='form-group'>
+      {{view 'select' content=categories optionValuePath='content.id' optionLabelPath='content.name' value=category.id class='form-control'}}
+    </div>
+
+    <div class='form-group'>
+      {{#if image}}
+        <img {{bind-attr src=image}}/>
+        <button {{action 'removeImage'}}type='button' class='remove pull-right'>Remove</button>
+      {{else}}
+        <img src='http://placehold.it/320x150&text=No image'>
+      {{/if}}
+      <div class='file'>
+        Browse...{{view 'upload-file' file=image accept='image/*'}}
       </div>
     </div>
 
-    <hr>
-  {{/each}}
-</div>
-{{else}}
-<form {{action 'submit' on='submit'}} role='form' class='well'>
-  <div {{bind-attr class=':form-group validationErrors.title:has-error'}}>
-    {{input value=title class='form-control' placeholder='Enter a title'}}
-    {{#if validationErrors.title}}
-    <div class='control-label'>{{validationErrors.title}}</div>
-    {{/if}}
-  </div>
-
-  <div class='form-group'>
-    {{textarea value=description class='form-control' placeholder='Enter a description'}}
-  </div>
-
-  <div class='form-group'>
-    {{input value=price class='form-control' type='number' placeholder='Enter a price'}}
-  </div>
-
-  <div class='form-group'>
-    {{view 'select' content=categories optionValuePath='content.id' optionLabelPath='content.name' value=category.id class='form-control'}}
-  </div>
-
-  <div class='form-group'>
-    {{#if image}}
-    <img {{bind-attr src=image}}/>
-    <button {{action 'removeImage'}}type='button' class='remove pull-right'>Remove</button>
-    {{else}}
-    <img src='http://placehold.it/320x150&text=No image'>
-    {{/if}}
-    <div class='file'>
-      Browse...{{view 'upload-file' file=image accept='image/*'}}
-    </div>
-  </div>
-
-  <button type='submit' {{bind-attr class=':update isDirty::disabled'}}>Update</button>
-  <button {{action 'toggleEditing'}} type='button' class='cancel'>Cancel</button>
-</form>
+    <button type='submit' {{bind-attr class=':update isDirty::disabled'}}>Update</button>
+    <button {{action 'toggleEditing'}} type='button' class='cancel'>Cancel</button>
+  </form>
 {{/unless}}
